# Polygon-Triangulation-Using-Monotone-Partitioning

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CodeRunnerFile.cpp  MonotonePartition.cpp  README.md  SECURITY.md  TriangulationMonotone.cpp  tempCodeRunnerFile.cpp
.github/: CODEOWNERS
.github/workflows/: c-cpp.yml
Monotone/: CMakeLists.txt  MonotonePartition.cpp  TriangulationMonotone.cpp
src/: CodeRunnerFile.cpp
